Git commit message 2 for SAP UI5 Walkthrough

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -7,3 +7,12 @@ HelloMsg = Hellos {0}!
 
 homePageTitle =  SAP UI5 Test Page
 helloPanelTitle =  SAP UI5 - Test
+
+openDialogButtonText = Dialog
+dialogCloseButtonText = Okay
+
+# Invoice List
+invoiceListTitle = Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
